test/error/rtc/rtc2.rzy
// error: loop in connection graph for sub

interface
  Tick
    function tick;
  end

component
  Dummy
    input
      in  : Tick;
    output
      out : Tick;
      
  implementation elementary
    function in.tick
      out.tick();
    end
  end

  Rtc2
    input
      in  : Tick;
    output
      out : Tick;
      
  implementation elementary
    component
      sub1 : Dummy;
      sub2 : Dummy;
      
    function in.tick
      out.tick();   //surpress errors or warnings about unused stuff
    end
    
    function sub1.out.tick
      sub2.in.tick();
    end

    function sub2.out.tick
      sub1.in.tick();
    end
    
  end

